# wiki

./: .gitignore  BACKLOG.md  BF1.md  CLAUDE.md  DEVLOG.md  README.md  ideas.md  living-framework.md  weekly.md
.codex/: AGENTS.md  settings.json
.github/: copilot-instructions.md
assistant/: operating-manual.md
automation/: ARCHITECTURE.md  CLIProxyApi.md  DEVLOG.md  ai_classifier.py  com.tommy.forgejo-webhook.plist  daemon.py  daily_briefing_generator.py  forgejo-webhook-runbook.md  forgejo.md  forgejo_issue_collector.py  forgejo_pr_collector.py  forgejo_webhook_service.py  get_chat_id.py  install_daemon.sh  markdown_optimizer.py  morning_routine.sh  nginx.md  of1_daily_build.sh  of1_daily_crm_build.sh  of1_mobile_ios_testflight.md  of1_mobile_ios_testflight.sh  quickstart.sh  remote-macmini.md  requirements.txt  run_daily_briefing.sh  s3-architect.md  team_issues_summary.md  team_prs_summary.md  test_telegram.py
bf1/: DEVLOG.md
cheatsheets/: cli.md
notes/: ideas.md
notion/: _INDEX.md
ocr/: Dive_into_OCR_VI_trang_1-10.md  Dive_into_OCR_VI_trang_10-50.md  Dive_into_OCR_VI_trang_100-150.md  (+5 more)
projects/rag/lab/: .env.example  cli.py  pyproject.toml
projects/rag/lab/scripts/: 01_similarity_demo.py  02_vector_crud.py  06_eval.py  eval_dataset.json
projects/rag/lab/src/: chunker.py  embedder.py  generator.py  loader.py  rag.py  retriever.py  vector_store.py
projects/rag/lab/tests/: test_chunker.py  test_embedder.py  test_embedder_ollama.py  test_generator.py  test_generator_ollama.py  test_loader.py  test_rag.py  test_retriever.py  test_vector_store.py
(+393 files in other folders)
